sfSandBoxCode/force-app/main/default/objects/Solvita__c/Solvita__c.object-meta.xml
<CustomObject>
    <label>Solvita</label>
    <nameField>
        <label>Solvita Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solvita</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>