sfSandBoxCode/force-app/main/default/objects/Solvita__c/fields/Ammonium_Level_NH4__c.field-meta.xml
<CustomField>
    <fullName>Ammonium_Level_NH4__c</fullName>
    <label>Ammonium Level(NH4)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>