sfSandBoxCode/force-app/main/default/objects/Solvita__c/fields/Carbon_dioxide_CO2__c.field-meta.xml
<CustomField>
    <fullName>Carbon_dioxide_CO2__c</fullName>
    <label>Carbon dioxide(CO2)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>