sfSandBoxCode/force-app/main/default/objects/Solvita__c/fields/Maturity_Index__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Index__c</fullName>
    <inlineHelpText>Pick a number between 1 and 8</inlineHelpText>
    <label>Maturity Index</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>