sfSandBoxCode/force-app/main/default/objects/Solvita__c/fields/Maturity_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Interpretation__c</fullName>
    <formula>IF(Maturity_Index__c = 8, &quot;Finished compost&quot;, 
IF(Maturity_Index__c = 7, &quot;Finished compost with few limitations (pH,EC)&quot;,
IF(Maturity_Index__c = 6, &quot;Curing stage&quot;,
IF(Maturity_Index__c = 5, &quot;Active compost towards curing&quot;,
IF(Maturity_Index__c = 4, &quot;Active compost&quot;,
IF(Maturity_Index__c = 3, &quot;Very Active compost&quot;,
IF(Maturity_Index__c &lt;= 2, &quot;Raw compost&quot;,NULL)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Interpretation</label>
    <type>Text</type>
</CustomField>