sfSandBoxCode/force-app/main/default/objects/Solvita__c/fields/Windrow_Maturity_Data__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Maturity_Data__c</fullName>
    <description>Master field from the Windrow Maturity Data object</description>
    <label>Windrow Maturity Data</label>
    <referenceTo>Windrow_Maturity_Data__c</referenceTo>
    <relationshipLabel>Solvita</relationshipLabel>
    <relationshipName>Solvita</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>